--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -193,6 +193,7 @@ ECHO_T = @ECHO_T@
 ENABLE_EXAMPLES = @ENABLE_EXAMPLES@
 EXAMPLESDIR = @EXAMPLESDIR@
 EXEEXT = @EXEEXT@
+HAVE_CXX11 = @HAVE_CXX11@
 INSTALL = @INSTALL@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
