--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -142,7 +142,7 @@ am_libreflex_a_OBJECTS = libreflex_a-convert.$(OBJEXT) \
 	libreflex_a-debug.$(OBJEXT) libreflex_a-error.$(OBJEXT) \
 	libreflex_a-input.$(OBJEXT) libreflex_a-lexer.$(OBJEXT) \
 	libreflex_a-pattern.$(OBJEXT) libreflex_a-posix.$(OBJEXT) \
-	libreflex_a-unicode.$(OBJEXT) libreflex_a-utf8.$(OBJEXT) \
+	libreflex_a-unicode.$(OBJEXT) \
 	$(top_builddir)/unicode/libreflex_a-block_scripts.$(OBJEXT) \
 	$(top_builddir)/unicode/libreflex_a-language_scripts.$(OBJEXT) \
 	$(top_builddir)/unicode/libreflex_a-letter_scripts.$(OBJEXT)
@@ -152,7 +152,7 @@ libreflexmin_a_LIBADD =
 am_libreflexmin_a_OBJECTS = libreflexmin_a-debug.$(OBJEXT) \
 	libreflexmin_a-error.$(OBJEXT) libreflexmin_a-input.$(OBJEXT) \
 	libreflexmin_a-lexer.$(OBJEXT) \
-	libreflexmin_a-pattern.$(OBJEXT) libreflexmin_a-utf8.$(OBJEXT)
+	libreflexmin_a-pattern.$(OBJEXT)
 libreflexmin_a_OBJECTS = $(am_libreflexmin_a_OBJECTS)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
@@ -180,13 +180,11 @@ am__depfiles_remade = $(top_builddir)/unicode/$(DEPDIR)/libreflex_a-block_script
 	./$(DEPDIR)/libreflex_a-pattern.Po \
 	./$(DEPDIR)/libreflex_a-posix.Po \
 	./$(DEPDIR)/libreflex_a-unicode.Po \
-	./$(DEPDIR)/libreflex_a-utf8.Po \
 	./$(DEPDIR)/libreflexmin_a-debug.Po \
 	./$(DEPDIR)/libreflexmin_a-error.Po \
 	./$(DEPDIR)/libreflexmin_a-input.Po \
 	./$(DEPDIR)/libreflexmin_a-lexer.Po \
-	./$(DEPDIR)/libreflexmin_a-pattern.Po \
-	./$(DEPDIR)/libreflexmin_a-utf8.Po
+	./$(DEPDIR)/libreflexmin_a-pattern.Po
 am__mv = mv -f
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -349,9 +347,9 @@ reflexincludedir = $(includedir)/reflex
 reflexinclude_HEADERS = $(top_srcdir)/include/reflex/lexer.h $(top_srcdir)/include/reflex/abslexer.h $(top_srcdir)/include/reflex/boostmatcher.h $(top_srcdir)/include/reflex/convert.h $(top_srcdir)/include/reflex/debug.h $(top_srcdir)/include/reflex/error.h $(top_srcdir)/include/reflex/flexlexer.h $(top_srcdir)/include/reflex/input.h $(top_srcdir)/include/reflex/pattern.h $(top_srcdir)/include/reflex/posix.h $(top_srcdir)/include/reflex/ranges.h $(top_srcdir)/include/reflex/setop.h $(top_srcdir)/include/reflex/stdmatcher.h $(top_srcdir)/include/reflex/timer.h $(top_srcdir)/include/reflex/unicode.h $(top_srcdir)/include/reflex/utf8.h
 lib_LIBRARIES = libreflex.a libreflexmin.a
 libreflex_a_CPPFLAGS = -I$(top_srcdir)/include $(SIMD_FLAGS)
-libreflex_a_SOURCES = convert.cpp debug.cpp error.cpp input.cpp lexer.cpp pattern.cpp posix.cpp unicode.cpp utf8.cpp $(top_srcdir)/unicode/block_scripts.cpp $(top_srcdir)/unicode/language_scripts.cpp $(top_srcdir)/unicode/letter_scripts.cpp
+libreflex_a_SOURCES = convert.cpp debug.cpp error.cpp input.cpp lexer.cpp pattern.cpp posix.cpp unicode.cpp $(top_srcdir)/unicode/block_scripts.cpp $(top_srcdir)/unicode/language_scripts.cpp $(top_srcdir)/unicode/letter_scripts.cpp
 libreflexmin_a_CPPFLAGS = -I$(top_srcdir)/include $(SIMD_FLAGS)
-libreflexmin_a_SOURCES = debug.cpp error.cpp input.cpp lexer.cpp pattern.cpp utf8.cpp
+libreflexmin_a_SOURCES = debug.cpp error.cpp input.cpp lexer.cpp pattern.cpp
 all: all-am
 
 .SUFFIXES:
@@ -460,13 +458,11 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libreflex_a-pattern.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libreflex_a-posix.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libreflex_a-unicode.Po@am__quote@ # am--include-marker
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libreflex_a-utf8.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libreflexmin_a-debug.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libreflexmin_a-error.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libreflexmin_a-input.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libreflexmin_a-lexer.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libreflexmin_a-pattern.Po@am__quote@ # am--include-marker
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libreflexmin_a-utf8.Po@am__quote@ # am--include-marker
 
 $(am__depfiles_remade):
 	@$(MKDIR_P) $(@D)
@@ -602,20 +598,6 @@ libreflex_a-unicode.obj: unicode.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libreflex_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libreflex_a-unicode.obj `if test -f 'unicode.cpp'; then $(CYGPATH_W) 'unicode.cpp'; else $(CYGPATH_W) '$(srcdir)/unicode.cpp'; fi`
 
-libreflex_a-utf8.o: utf8.cpp
-@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libreflex_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libreflex_a-utf8.o -MD -MP -MF $(DEPDIR)/libreflex_a-utf8.Tpo -c -o libreflex_a-utf8.o `test -f 'utf8.cpp' || echo '$(srcdir)/'`utf8.cpp
-@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/libreflex_a-utf8.Tpo $(DEPDIR)/libreflex_a-utf8.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='utf8.cpp' object='libreflex_a-utf8.o' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libreflex_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libreflex_a-utf8.o `test -f 'utf8.cpp' || echo '$(srcdir)/'`utf8.cpp
-
-libreflex_a-utf8.obj: utf8.cpp
-@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libreflex_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libreflex_a-utf8.obj -MD -MP -MF $(DEPDIR)/libreflex_a-utf8.Tpo -c -o libreflex_a-utf8.obj `if test -f 'utf8.cpp'; then $(CYGPATH_W) 'utf8.cpp'; else $(CYGPATH_W) '$(srcdir)/utf8.cpp'; fi`
-@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/libreflex_a-utf8.Tpo $(DEPDIR)/libreflex_a-utf8.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='utf8.cpp' object='libreflex_a-utf8.obj' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libreflex_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libreflex_a-utf8.obj `if test -f 'utf8.cpp'; then $(CYGPATH_W) 'utf8.cpp'; else $(CYGPATH_W) '$(srcdir)/utf8.cpp'; fi`
-
 $(top_builddir)/unicode/libreflex_a-block_scripts.o: $(top_builddir)/unicode/block_scripts.cpp
 @am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libreflex_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT $(top_builddir)/unicode/libreflex_a-block_scripts.o -MD -MP -MF $(top_builddir)/unicode/$(DEPDIR)/libreflex_a-block_scripts.Tpo -c -o $(top_builddir)/unicode/libreflex_a-block_scripts.o `test -f '$(top_builddir)/unicode/block_scripts.cpp' || echo '$(srcdir)/'`$(top_builddir)/unicode/block_scripts.cpp
 @am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(top_builddir)/unicode/$(DEPDIR)/libreflex_a-block_scripts.Tpo $(top_builddir)/unicode/$(DEPDIR)/libreflex_a-block_scripts.Po
@@ -727,20 +709,6 @@ libreflexmin_a-pattern.obj: pattern.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='pattern.cpp' object='libreflexmin_a-pattern.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libreflexmin_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libreflexmin_a-pattern.obj `if test -f 'pattern.cpp'; then $(CYGPATH_W) 'pattern.cpp'; else $(CYGPATH_W) '$(srcdir)/pattern.cpp'; fi`
-
-libreflexmin_a-utf8.o: utf8.cpp
-@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libreflexmin_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libreflexmin_a-utf8.o -MD -MP -MF $(DEPDIR)/libreflexmin_a-utf8.Tpo -c -o libreflexmin_a-utf8.o `test -f 'utf8.cpp' || echo '$(srcdir)/'`utf8.cpp
-@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/libreflexmin_a-utf8.Tpo $(DEPDIR)/libreflexmin_a-utf8.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='utf8.cpp' object='libreflexmin_a-utf8.o' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libreflexmin_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libreflexmin_a-utf8.o `test -f 'utf8.cpp' || echo '$(srcdir)/'`utf8.cpp
-
-libreflexmin_a-utf8.obj: utf8.cpp
-@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libreflexmin_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libreflexmin_a-utf8.obj -MD -MP -MF $(DEPDIR)/libreflexmin_a-utf8.Tpo -c -o libreflexmin_a-utf8.obj `if test -f 'utf8.cpp'; then $(CYGPATH_W) 'utf8.cpp'; else $(CYGPATH_W) '$(srcdir)/utf8.cpp'; fi`
-@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/libreflexmin_a-utf8.Tpo $(DEPDIR)/libreflexmin_a-utf8.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='utf8.cpp' object='libreflexmin_a-utf8.obj' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libreflexmin_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libreflexmin_a-utf8.obj `if test -f 'utf8.cpp'; then $(CYGPATH_W) 'utf8.cpp'; else $(CYGPATH_W) '$(srcdir)/utf8.cpp'; fi`
 install-reflexincludeHEADERS: $(reflexinclude_HEADERS)
 	@$(NORMAL_INSTALL)
 	@list='$(reflexinclude_HEADERS)'; test -n "$(reflexincludedir)" || list=; \
@@ -903,13 +871,11 @@ distclean: distclean-am
 	-rm -f ./$(DEPDIR)/libreflex_a-pattern.Po
 	-rm -f ./$(DEPDIR)/libreflex_a-posix.Po
 	-rm -f ./$(DEPDIR)/libreflex_a-unicode.Po
-	-rm -f ./$(DEPDIR)/libreflex_a-utf8.Po
 	-rm -f ./$(DEPDIR)/libreflexmin_a-debug.Po
 	-rm -f ./$(DEPDIR)/libreflexmin_a-error.Po
 	-rm -f ./$(DEPDIR)/libreflexmin_a-input.Po
 	-rm -f ./$(DEPDIR)/libreflexmin_a-lexer.Po
 	-rm -f ./$(DEPDIR)/libreflexmin_a-pattern.Po
-	-rm -f ./$(DEPDIR)/libreflexmin_a-utf8.Po
 	-rm -f Makefile
 distclean-am: clean-am distclean-compile distclean-generic \
 	distclean-tags
@@ -966,13 +932,11 @@ maintainer-clean: maintainer-clean-am
 	-rm -f ./$(DEPDIR)/libreflex_a-pattern.Po
 	-rm -f ./$(DEPDIR)/libreflex_a-posix.Po
 	-rm -f ./$(DEPDIR)/libreflex_a-unicode.Po
-	-rm -f ./$(DEPDIR)/libreflex_a-utf8.Po
 	-rm -f ./$(DEPDIR)/libreflexmin_a-debug.Po
 	-rm -f ./$(DEPDIR)/libreflexmin_a-error.Po
 	-rm -f ./$(DEPDIR)/libreflexmin_a-input.Po
 	-rm -f ./$(DEPDIR)/libreflexmin_a-lexer.Po
 	-rm -f ./$(DEPDIR)/libreflexmin_a-pattern.Po
-	-rm -f ./$(DEPDIR)/libreflexmin_a-utf8.Po
 	-rm -f Makefile
 maintainer-clean-am: distclean-am maintainer-clean-generic
 
@@ -1014,10 +978,10 @@ uninstall-am: uninstall-libLIBRARIES uninstall-reflexincludeHEADERS
 # lib_LTLIBRARIES       = libreflex.la libreflexmin.a
 #
 # libreflex_la_CPPFLAGS = -I$(top_srcdir)/include
-# libreflex_la_SOURCES  = convert.cpp debug.cpp error.cpp input.cpp lexer.cpp pattern.cpp posix.cpp unicode.cpp utf8.cpp $(top_srcdir)/unicode/block_scripts.cpp $(top_srcdir)/unicode/language_scripts.cpp $(top_srcdir)/unicode/letter_scripts.cpp
+# libreflex_la_SOURCES  = convert.cpp debug.cpp error.cpp input.cpp lexer.cpp pattern.cpp posix.cpp unicode.cpp $(top_srcdir)/unicode/block_scripts.cpp $(top_srcdir)/unicode/language_scripts.cpp $(top_srcdir)/unicode/letter_scripts.cpp
 #
 # libreflexmin_la_CPPFLAGS = -I$(top_srcdir)/include
-# libreflexmin_la_SOURCES  = debug.cpp error.cpp input.cpp lexer.cpp pattern.cpp utf8.cpp
+# libreflexmin_la_SOURCES  = debug.cpp error.cpp input.cpp lexer.cpp pattern.cpp
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
