--- a/Makefile.in
+++ b/Makefile.in
@@ -230,7 +230,7 @@ ECHO_T = @ECHO_T@
 ENABLE_EXAMPLES = @ENABLE_EXAMPLES@
 EXAMPLESDIR = @EXAMPLESDIR@
 EXEEXT = @EXEEXT@
-HAVE_CXX11 = @HAVE_CXX11@
+HAVE_CXX17 = @HAVE_CXX17@
 INSTALL = @INSTALL@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
@@ -313,7 +313,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = lib src . tests @EXAMPLESDIR@
+SUBDIRS = lib src . @EXAMPLESDIR@
 
 # man1_MANS = doc/man/reflex.1
 EXTRA_DIST = README.md LICENSE.txt CONTRIBUTING.md CODE_OF_CONDUCT.md
@@ -840,10 +840,10 @@ install-data-hook:
 		 echo "|             https://sourceforge.net/projects/re-flex |"; \
 		 echo "|______________________________________________________|";
 
-.PHONY:		test
+#.PHONY:		test
 
-test:		$(top_builddir)/src/reflex
-		-cd tests; $(MAKE) && ./rtest
+#test:		$(top_builddir)/src/reflex
+#		-cd tests; $(MAKE) && ./rtest
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
